[fix] old cors policy